# claude-toolbar

./: .gitignore  README.md  pyproject.toml  setup.py
scripts/: build_dmg.sh  build_zip.sh  measure_startup.py
src/claude_toolbar/: __init__.py  app.py  config.py  models.py  paths.py  preferences.py  process_monitor.py  pty_manager.py  scheduler.py  startup.py  usage_tracker.py  utils.py
src/claude_toolbar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/jaraco/: __init__.py
src/jaraco/text/: __init__.py
